<resources>
    <string name="app_name">JustPlay</string>
    <string name="title_activity_login">Sign in</string>
    <string name="not_log_in">Login Error</string>
    <string name="title_activity_main">JustPlay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">286026141855698</string>
    <string name="song_title"> </string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="genre">Gender</string>

    <string name="activityName">JustPlay</string>

    <!-- PlayBar names -->
    <string name="play">Play</string>
    <string name="rewind">Rewind</string>
    <string name="favourite">Favourite</string>
    <string name="forward">Forward</string>
    <string name="block">Block</string>
    <string name="currentTime" />
    <string name="songDuration" />
    <string name="background" />


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="artist_name">Artist Name</string>
    <string name="artist_label">Artist</string>
    <string name="name">Artist</string>
    <string name="artists">Artists</string>
    <string name="btn1">Button 1 clicked</string>
    <string name="jogging">Jogging</string>
    <string name="walking">Walking</string>
    <string name="Resting">Resting</string>


</resources>
