<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_gravity="start"
    android:id="@+id/playbar"
    tools:showIn="@layout/content_main">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/colorPrimary"
        android:layout_alignBottom="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentTime"
                android:textColor="@color/colortextMessages"
                android:layout_weight="0.33" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.36" />

            <TextView
                android:id="@+id/songDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/songDuration"
                android:textColor="@color/colortextMessages"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playBarBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_favorites"
                android:contentDescription="@string/favorito"/>

            <ImageView
                android:id="@+id/rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_fast_rewind"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/rewind"/>

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_play"
                android:contentDescription="@string/play"/>

            <ImageView
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_fast_forward"
                android:contentDescription="@string/forward"/>

            <ImageView
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_block"
                android:contentDescription="@string/block"/>


        </LinearLayout>

        <TextView
            android:id="@+id/song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textColor="@color/colortextMessages"
            android:layout_marginLeft="@dimen/margin_text"
            android:layout_marginRight="@dimen/margin_text"/>
    </LinearLayout>

</RelativeLayout>
