<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/titleSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textSize="@dimen/songsname"
        android:textColor="@color/colortextMessages"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/artistSong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.99"
            android:text="@string/artist"
            android:textSize="@dimen/caractsong"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="@dimen/caractsong"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>