<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="372dp"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:weightSum="1"
    tools:context="com.example.filip.justplay.Fragments.MainPage">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/seatedBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/folder"
            app:srcCompat="@drawable/backliner"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layoutTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/Resting"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/Resting"
                android:textAllCaps="false"
                android:textColor="@color/colortextMessages"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageButton
                android:id="@+id/playButtonR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="@color/colortextMessages"
                app:srcCompat="@drawable/ic_play_button"
                tools:ignore="ContentDescription,InefficientWeight,UnusedAttribute" />

            <ImageButton
                android:id="@+id/shuffleRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="@color/colortextMessages"
                app:srcCompat="@drawable/ic_couple_of_arrows_changing_places"
                tools:ignore="ContentDescription,InefficientWeight,UnusedAttribute" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/walkingBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/folder"
            app:srcCompat="@drawable/backlinew"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layoutTopwalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/Walking"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/walking"
                android:textColor="@color/colortextMessages"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageButton
                android:id="@+id/playButtonW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="@color/colortextMessages"
                app:srcCompat="@drawable/ic_play_button"
                tools:ignore="ContentDescription,InefficientWeight"
                tools:targetApi="lollipop" />

            <ImageButton
                android:id="@+id/shuffleWalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="@color/colortextMessages"
                app:srcCompat="@drawable/ic_couple_of_arrows_changing_places"
                tools:ignore="ContentDescription,InefficientWeight,UnusedAttribute" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/joggingBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/folder"
            app:srcCompat="@drawable/backline"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layoutTopJogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/jogging"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/jogging"
                android:textColor="@color/colortextMessages"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageButton
                android:id="@+id/playButtonJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="@color/colortextMessages"
                app:srcCompat="@drawable/ic_play_button"
                tools:ignore="ContentDescription,InefficientWeight"
                tools:targetApi="lollipop" />

            <ImageButton
                android:id="@+id/shuffleJogging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="@color/colortextMessages"
                app:srcCompat="@drawable/ic_couple_of_arrows_changing_places"
                tools:ignore="ContentDescription,InefficientWeight,UnusedAttribute" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>